[package]
name = "rmst-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "=0.1.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.0"

tokio = { version = "1.45.0", features = ["full"] }
reqwest = "0.12.15"
select = "0.6"
url = "2.3"
image = "0.25"
