[package]
name = "rmst-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "=0.1.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.0"

tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["blocking"] }
select = "0.6"
url = "2.3"
image = "0.25"

resvg = "0.6"
lazy_static = "1.5.0"

html2md = "0.2"
anyhow = "1"          # 错误处理
clap = "3.0.0-beta.4" # 命令行解析
colored = "2"         # 命令终端多彩显示
jsonxf = "1.1"        # JSON pretty print 格式化
mime = "0.3"          # 处理 mime 类型
